<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".auth.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/code_browndark_two"
            android:textAllCaps="false"
            android:text="@string/login"
            android:textSize="@dimen/_18sdp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/solway_medium"

            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/code_browndark_three"
            android:textAllCaps="false"
            android:text="@string/welcome_back"
            android:textSize="@dimen/_28sdp"
            android:fontFamily="@font/solway_regular"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="Email"
            android:textSize="@dimen/_17sdp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_25sdp"

            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/edtEmail"
            android:backgroundTint="@color/code_browndark_two"
            android:textColor="@color/black"
            android:textSize="@dimen/_22sdp"
            android:hint=""
            android:fontFamily="@font/solway_extrabold"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="Password"
            android:textSize="@dimen/_17sdp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_25sdp"

            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/edtPassword"
            android:backgroundTint="@color/code_browndark_two"
            android:textColor="@color/black"
            android:textSize="@dimen/_22sdp"
            android:hint=""
            android:fontFamily="@font/solway_extrabold"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/forgot_password"
            android:textSize="@dimen/_14sdp"
            android:gravity="end"
            android:textColor="@color/code_browndark_two"
            android:fontFamily="@font/solway_extrabold"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/btnlogin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/login"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/background_rounded_brown"
            android:layout_height="@dimen/_45sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textSize="@dimen/_14sdp"
            android:gravity="center"
            android:textColor="@color/code_browndark_two"
            android:fontFamily="@font/solway_medium"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>