<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dashboard.fragments.HomeFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/code_browndark_two"
            android:textAllCaps="false"
            android:text="@string/menu"
            android:textSize="@dimen/_18sdp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/solway_medium"

            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_height="@dimen/_1sdp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/_45sdp"
                android:src="@drawable/ic_espresso"
                android:layout_height="@dimen/_45sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:text="@string/espresso"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_18sdp"
                android:fontFamily="@font/solway_bold"

                android:layout_height="wrap_content"/>



        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:src="@drawable/ic_right_arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"

            android:layout_height="@dimen/_25sdp"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_height="@dimen/_1sdp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/_45sdp"
                android:src="@drawable/ic_cappicino"
                android:layout_height="@dimen/_45sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:text="@string/cappuccino"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_18sdp"
                android:fontFamily="@font/solway_bold"

                android:layout_height="wrap_content"/>



        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:src="@drawable/ic_right_arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"

            android:layout_height="@dimen/_25sdp"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_height="@dimen/_1sdp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/_45sdp"
                android:src="@drawable/ic_machiato"
                android:layout_height="@dimen/_45sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:text="@string/macciato"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_18sdp"
                android:fontFamily="@font/solway_bold"

                android:layout_height="wrap_content"/>



        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:src="@drawable/ic_right_arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"

            android:layout_height="@dimen/_25sdp"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_height="@dimen/_1sdp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/_45sdp"
                android:src="@drawable/ic_mocha"
                android:layout_height="@dimen/_45sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:text="Mocha"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_18sdp"
                android:fontFamily="@font/solway_bold"

                android:layout_height="wrap_content"/>



        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:src="@drawable/ic_right_arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"

            android:layout_height="@dimen/_25sdp"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_height="@dimen/_1sdp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/_45sdp"
                android:src="@drawable/ic_latte"
                android:layout_height="@dimen/_45sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:text="@string/latte"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_18sdp"
                android:fontFamily="@font/solway_bold"

                android:layout_height="wrap_content"/>



        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:src="@drawable/ic_right_arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"

            android:layout_height="@dimen/_25sdp"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_height="@dimen/_1sdp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_gravity="center"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/code_browndark_two"
        android:text="@string/github_redeyesncode"
        android:fontFamily="@font/solway_bold"

        android:layout_height="wrap_content"/>

</LinearLayout>